tests/__snapshots__/validation-target-typescript-not-installed-stderr.snap.txt
Error: Cannot use 'current' as a target. Failed to resolve the installed TypeScript module.

Use the '--list' command line option to inspect the list of supported versions.

  1 | {
  2 |   "target": [
  3 |     "current"
    |     ~~~~~~~~~
  4 |   ]
  5 | }
  6 | 

      at ./tstyche.config.json:3:5

